c/examples/gcc/testsuite/c-c++-common/gomp/pr79428-6.c
/* PR c/79428 */
/* { dg-options "-fopenmp" } */
#pragma omp target /* { dg-error "expected declaration specifiers before end of line" } */
